Add thin-slice mobile runner and align Woolworths cart flow

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,8 +20,10 @@
       <button id="start">Start</button>
       <button id="stop">Stop</button>
     </div>
+    <div class="row">
+      <button id="load">Load queued order</button>
+    </div>
     <div id="progress"></div>
     <script src="popup.js"></script>
   </body>
   </html>
-
